--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,17 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.github.smallru8</groupId>
+      <artifactId>NikoBot</artifactId>
+      <version>3.0</version>
+    </dependency>
   </dependencies>
+  <repositories>
+    <repository>
+  		<id>Small2Space</id>
+  		<name>Small2Space</name>
+  		<url>https://raw.github.com/Small2Space/mvn-repo/master</url>
+  	</repository>
+  </repositories>
 </project>
