--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,27 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>net.dv8tion</groupId>
+      <artifactId>JDA</artifactId>
+      <version>4.3.0_339</version>
+	</dependency>
+    <dependency>
       <groupId>com.github.smallru8</groupId>
       <artifactId>NikoBot</artifactId>
-      <version>3.0</version>
+      <version>3.6</version>
     </dependency>
+    <dependency>
+      <groupId>org.greenrobot</groupId>
+      <artifactId>eventbus</artifactId>
+      <version>3.1.1</version>
+	</dependency>
   </dependencies>
   <repositories>
+  	<repository>
+      <id>dv8tion</id>
+      <name>m2-dv8tion</name>
+      <url>https://m2.dv8tion.net/releases</url>
+    </repository>
     <repository>
   		<id>Small2Space</id>
   		<name>Small2Space</name>
